# miso

./: .gitignore  CMakeLists.txt  README.md
src/: isocline.cc  isocline.h  main.cc  solver.cc  solver.h
